k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: essedum
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 8084
      targetPort: 8084
    - name: langflow-proxy
      port: 8086
      targetPort: 8086
    - name: langfuse-proxy
      port: 8087
      targetPort: 8087
    - name: litellm-proxy
      port: 4000
      targetPort: 4000
    - name: langfuse-db-proxy
      port: 8089
      targetPort: 8089
  type: ClusterIP
